# dotfiles

./: AUTHORS  Makefile.am  README.md  configure.ac  install-gtk-theme.sh  sweetly-gtk-theme.doap  sweetly-gtk-theme.spec
EXTRA_JOYFUL/.config/htop/: htoprc
EXTRA_JOYFUL/.config/mpv/scripts/: material-osc.lua
