AC_INIT([Sweetly ], 2.0, [https://github.com/selene57/sweetly-gtk-theme/issues], [sweetly-gtk-theme], [http://github.com/owl4ce/dotfiles])
AM_INIT_AUTOMAKE([-Wno-portability no-dist-gzip dist-xz foreign subdir-objects 1.9 tar-ustar])
AC_PREFIX_DEFAULT(/usr/local)
AM_SILENT_RULES([yes])


AC_CONFIG_FILES([Makefile])
AC_OUTPUT

AC_MSG_RESULT([
        Sweetly Icon Theme $VERSION
        ========

        prefix:                 ${prefix}
        exec_prefix:            ${exec_prefix}
        datarootdir:            ${datarootdir}

])